force-app/main/default/objects/Address_vod__c/fields/BOT_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Entity_ID__c</fullName>
    <description>To store the BOT Entity ID. It is used for BOT internal purpose.</description>
    <externalId>true</externalId>
    <label>Entity ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>