force-app/main/default/objects/Address_vod__c/fields/BOT_Is_BOT_Data__c.field-meta.xml
<CustomField>
    <fullName>BOT_Is_BOT_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is created by BusinessOne Technologies. It indicates that the record is created by BOT.</description>
    <label>Is BOT Data</label>
    <type>Checkbox</type>
</CustomField>