force-app/main/default/objects/Address_vod__c/recordTypes/BOT_Address.recordType-meta.xml
<RecordType>
    <fullName>BOT_Address</fullName>
    <active>true</active>
    <description>It is created by BusinessOne Technologies Inc and used to store BOT address records.</description>
    <label>BOT Address</label>
</RecordType>